feat: simplify values.yaml by removing unnecessary comments and restructuring backup configurations

--- a/charts/cnpg-pgdump-backup/values.yaml
+++ b/charts/cnpg-pgdump-backup/values.yaml
@@ -1,172 +1,52 @@
-## @section App Template Chart Values
 app-template:
-  ## @section Global Configuration
-  global:
-    # -- Full name override
-    fullnameOverride: ""
-    # -- Name override
-    nameOverride: ""
-    # -- Global labels applied to all resources
-    labels: {}
-      # app.kubernetes.io/part-of: cnpg-pgdump-backup
-    # -- Global annotations applied to all resources
-    annotations: {}
-      # description: "PostgreSQL backup and restore for CloudNativePG"
-
-  ## @section CNPG Cluster Configuration
   cnpg:
-    # -- Secret name containing CNPG connection details (must contain: host, port, username, password, dbname)
-    secretName: "litellm-pg-app"
+    secretName: litellm-pg-app
 
-  ## @section S3 Storage Configuration
   s3:
-    # -- REQUIRED: Secret name containing S3 credentials (created by Terraform with S3_* keys)
-    secretName: "open-web-ui-s3"
+    secretName: open-web-ui-s3
 
-  ## @section Restore Configuration
   restore:
-    # -- Enable restore Job (also set restore.object)
     enabled: false
-    # -- S3 object key to restore (empty = manual trigger required via --set)
     object: ""
 
-  ## @section Backup Controller (CronJob)
+  defaultPodOptions:
+    securityContext:
+      runAsNonRoot: true
+      runAsUser: 999
+      runAsGroup: 999
+      fsGroup: 999
+    terminationGracePeriodSeconds: 30
+
   controllers:
     backup:
-      # -- Enable scheduled backup CronJob
-      enabled: true
-      # -- Controller type
       type: cronjob
-      # -- CronJob specific settings
-      cronjob:
-        # -- CronJob schedule (default: daily at 1:35 PM)
-        schedule: "35 13 * * *"
-        # -- Concurrency policy (Forbid, Replace, Allow)
-        concurrencyPolicy: Forbid
-        # -- Number of successful jobs to keep
-        successfulJobsHistory: 3
-        # -- Number of failed jobs to keep
-        failedJobsHistory: 3
-        # -- Starting deadline seconds
-        startingDeadlineSeconds: 30
       pod:
-        # -- Pod security context
-        securityContext:
-          runAsNonRoot: true
-          runAsUser: 999
-          runAsGroup: 999
-          fsGroup: 999
-        # -- Restart policy
         restartPolicy: OnFailure
-        # -- Termination grace period seconds
-        terminationGracePeriodSeconds: 30
+      cronjob:
+        schedule: "35 13 * * *"
+        concurrencyPolicy: Forbid
+        successfulJobsHistory: 3
+        failedJobsHistory: 3
+        startingDeadlineSeconds: 30
       containers:
         backup:
           image:
             repository: ghcr.io/itbm/postgresql-backup-s3
             tag: latest
             pullPolicy: IfNotPresent
-          env:
-            - name: POSTGRES_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
-                  key: host
-            - name: POSTGRES_PORT
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
-                  key: port
-            - name: POSTGRES_DATABASE
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
-                  key: dbname
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
-                  key: username
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
-                  key: password
-            - name: S3_BUCKET
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.s3.secretName }}"
-                  key: S3_BUCKET_NAME
-            - name: S3_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.s3.secretName }}"
-                  key: S3_ACCESS_KEY_ID
-            - name: S3_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.s3.secretName }}"
-                  key: S3_SECRET_ACCESS_KEY
-            # - name: AWS_SESSION_TOKEN
-            #   valueFrom:
-            #     secretKeyRef:
-            #       name: "{{ .Values.s3.secretName }}"
-            #       key: AWS_SESSION_TOKEN
-            - name: S3_REGION
-              valueFrom:
-                secretKeyRef:
-                  name: "{{ .Values.s3.secretName }}"
-                  key: S3_REGION_NAME
-          # -- Container security context
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
             capabilities:
               drop:
                 - ALL
-          # -- Resources
           resources:
             requests:
-              cpu: "100m"
-              memory: "256Mi"
+              cpu: 100m
+              memory: 256Mi
             limits:
-              cpu: "500m"
-              memory: "512Mi"
-
-    ## @section Restore Controller (Job)
-    restore:
-      # -- Enable restore Job (also set restore.object)
-      enabled: false
-      # -- Controller type
-      type: job
-      # -- Job annotations
-      annotations:
-        helm.sh/hook: post-install
-        helm.sh/hook-delete-policy: hook-succeeded,before-hook-creation
-      job:
-        # -- TTL seconds after job finishes
-        ttlSecondsAfterFinished: 300
-        # -- Backoff limit for job retries
-        backoffLimit: 4
-      pod:
-        # -- Pod security context
-        securityContext:
-          runAsNonRoot: true
-          runAsUser: 999
-          runAsGroup: 999
-          fsGroup: 999
-        # -- Restart policy
-        restartPolicy: Never
-        # -- Termination grace period seconds
-        terminationGracePeriodSeconds: 30
-      containers:
-        restore:
-          image:
-            repository: ghcr.io/itbm/postgresql-backup-s3
-            tag: latest
-            pullPolicy: IfNotPresent
-          command:
-            - /restore.sh
+              cpu: 500m
+              memory: 512Mi
           env:
             - name: POSTGRES_HOST
               valueFrom:
@@ -208,11 +88,85 @@ app-template:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_SECRET_ACCESS_KEY
-            # - name: AWS_SESSION_TOKEN
-            #   valueFrom:
-            #     secretKeyRef:
-            #       name: "{{ .Values.s3.secretName }}"
-            #       key: AWS_SESSION_TOKEN
+            - name: S3_REGION
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.s3.secretName }}"
+                  key: S3_REGION_NAME
+
+    restore:
+      enabled: false
+      type: job
+      annotations:
+        helm.sh/hook: post-install
+        helm.sh/hook-delete-policy: hook-succeeded,before-hook-creation
+      job:
+        ttlSecondsAfterFinished: 300
+        backoffLimit: 4
+      pod:
+        restartPolicy: Never
+      containers:
+        restore:
+          image:
+            repository: ghcr.io/itbm/postgresql-backup-s3
+            tag: latest
+            pullPolicy: IfNotPresent
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
+          command:
+            - /restore.sh
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 500m
+              memory: 1Gi
+          env:
+            - name: POSTGRES_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.cnpg.secretName }}"
+                  key: host
+            - name: POSTGRES_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.cnpg.secretName }}"
+                  key: port
+            - name: POSTGRES_DATABASE
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.cnpg.secretName }}"
+                  key: dbname
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.cnpg.secretName }}"
+                  key: username
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.cnpg.secretName }}"
+                  key: password
+            - name: S3_BUCKET
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.s3.secretName }}"
+                  key: S3_BUCKET_NAME
+            - name: S3_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.s3.secretName }}"
+                  key: S3_ACCESS_KEY_ID
+            - name: S3_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.s3.secretName }}"
+                  key: S3_SECRET_ACCESS_KEY
             - name: S3_REGION
               valueFrom:
                 secretKeyRef:
@@ -220,18 +174,3 @@ app-template:
                   key: S3_REGION_NAME
             - name: BACKUP_FILE
               value: "{{ .Values.restore.object }}"
-          # -- Container security context
-          securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
-            capabilities:
-              drop:
-                - ALL
-          # -- Resources
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "256Mi"
-            limits:
-              cpu: "500m"
-              memory: "1Gi"
