feat: add pgdump-backup Helm chart with PostgreSQL backup and restore configurations

--- a/charts/pgdump-backup/Chart.yaml
+++ b/charts/pgdump-backup/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cnpg-pgdump-backup
+name: pgdump-backup
 description: Automated PostgreSQL backup and restore solution for CloudNativePG clusters
 type: application
 version: 0.1.0
