--- a/charts/pgdump-backup/values.yaml
+++ b/charts/pgdump-backup/values.yaml
@@ -1,5 +1,5 @@
 app-template:
-  cnpg:
+  postgres:
     secretName: litellm-pg-app
 
   s3:
@@ -51,27 +51,27 @@ app-template:
             - name: POSTGRES_HOST
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: host
             - name: POSTGRES_PORT
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: port
             - name: POSTGRES_DATABASE
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: dbname
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: username
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: password
             - name: S3_BUCKET
               valueFrom:
@@ -130,27 +130,27 @@ app-template:
             - name: POSTGRES_HOST
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: host
             - name: POSTGRES_PORT
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: port
             - name: POSTGRES_DATABASE
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: dbname
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: username
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cnpg.secretName }}"
+                  name: "{{ .Values.postgres.secretName }}"
                   key: password
             - name: S3_BUCKET
               valueFrom:
