--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -65,13 +65,13 @@ jobs:
           done
 
       - name: Configure Git
-        if: github.ref == 'refs/heads/feat/backup-with-pg-dump'
+        if: github.ref == 'refs/heads/main'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Run chart-releaser
-        if: github.ref == 'refs/heads/feat/backup-with-pg-dump'
+        if: github.ref == 'refs/heads/main'
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
