--- a/charts/ai-gateway-core/templates/tls-clusterissuer.yaml
+++ b/charts/ai-gateway-core/templates/tls-clusterissuer.yaml
@@ -19,5 +19,5 @@ spec:
             parentRefs:
               - kind: Gateway
                 name: {{ .Values.gateway.name }}
-                namespace: {{ .Release.Namespace }}
+                namespace: {{ .Values.namespace | default .Release.Namespace }}
 {{- end }}
