--- a/charts/ai-gateway-core/templates/gateway.yaml
+++ b/charts/ai-gateway-core/templates/gateway.yaml
@@ -4,6 +4,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: {{ .Values.gateway.name }}
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   {{- with .Values.gateway.labels }}
   labels:
     {{- toYaml . | nindent 4 }}
