--- a/charts/ai-gateway-core/templates/httproute-http-to-https.yaml
+++ b/charts/ai-gateway-core/templates/httproute-http-to-https.yaml
@@ -3,6 +3,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: {{ .Release.Name }}-http-to-https
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   {{- with .Values.gateway.labels }}
   labels:
     {{- toYaml . | nindent 4 }}
@@ -10,6 +11,7 @@ metadata:
 spec:
   parentRefs:
     - name: {{ .Values.gateway.name }}
+      namespace: {{ .Values.namespace | default .Release.Namespace }}
       sectionName: http
   rules:
     - filters:
