(chore): added otel tracing to envoy proxy config

--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -18,6 +18,20 @@ gateway:
   infrastructure:
     enabled: true
 
+gatewayConfig:
+  enabled: true
+  name: ai-gateway-tracing
+  labels: {}
+  annotations: {}
+  extProc:
+    env:
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: "https://tempo-prod-10-prod-eu-west-2.grafana.net/tempo"
+      - name: OTEL_SERVICE_NAME
+        value: "ai-gateway"
+      - name: OTEL_EXPORTER_OTLP_PROTOCOL
+        value: "http/protobuf"
+
 envoyProxy:
   enabled: true
   name: ai-gateway
@@ -38,11 +52,7 @@ envoyProxy:
         container:
           resources: {}
           securityContext: {}
-          env:
-            - name: GRPC_USER
-              value: "<your-username>"
-            - name: GRPC_PASSWORD
-              value: "<your-api-key>"
+          env: []
           volumeMounts: []
         volumes: []
       envoyService:
@@ -54,16 +64,7 @@ envoyProxy:
   telemetry:
     accessLog: {}
     metrics: {}
-    tracing:
-      provider:
-        name: Otel
-        otel:
-          endpoint: tempo-prod-10-prod-eu-west-2.grafana.net:443
-          tls:
-            mode: Enabled
-          http:
-            path: /tempo
-            hostOverride: tempo-prod-10-prod-eu-west-2.grafana.net
+    tracing: {}
   bootstrap: {}
   shutdown:
     drainTimeout: 30s
