--- a/charts/ai-gateway-core/templates/gatewayconfig.yaml
+++ b/charts/ai-gateway-core/templates/gatewayconfig.yaml
@@ -13,8 +13,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  extProc:
-    {{- with .Values.gatewayConfig.extProc }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
+  {{- with .Values.gatewayConfig.spec }}
+  {{- toYaml . | nindent 2 }}
+  {{- end }}
 {{- end }}
