--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -28,7 +28,7 @@ gatewayConfig:
       kubernetes:
         env:
           - name: OTEL_EXPORTER_OTLP_ENDPOINT
-            value: "https://analytics.ai.camer.digital"
+            value: "http://phoenix-svc.converse-phoenix:6006"
           - name: OTEL_SERVICE_NAME
             value: "ai-gateway"
           - name: OTEL_EXPORTER_OTLP_PROTOCOL
