(chore): changed exporter endpoint to phoenix v3

--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -29,10 +29,8 @@ gatewayConfig:
         env:
           - name: OTEL_EXPORTER_OTLP_ENDPOINT
             value: "http://phoenix-svc.converse-phoenix:6006"
-          - name: OTEL_SERVICE_NAME
-            value: "ai-gateway"
-          - name: OTEL_EXPORTER_OTLP_PROTOCOL
-            value: "http/protobuf"
+          - name: OTEL_METRICS_EXPORTER
+            value: "none"
 
 envoyProxy:
   enabled: true
