--- a/charts/ai-gateway-core/templates/tls-certificate.yaml
+++ b/charts/ai-gateway-core/templates/tls-certificate.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ .Release.Name }}-tls-cert
-  namespace: {{ .Values.namespace | default .Release.Namespace }}
+  namespace: {{ .Values.envoy.namespace | default .Release.Namespace }}
 spec:
   secretName: {{ .Values.tls.secretName }}
   issuerRef:
