--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -11,7 +11,7 @@ tls:
   secretName: converse-llm-tls
 
   issuer:
-    enabled: true
+    create: true
     kind: ClusterIssuer
     name: letsencrypt
     email: security@camer.digital
