--- a/charts/ai-gateway-core/templates/tls-certificate.yaml
+++ b/charts/ai-gateway-core/templates/tls-certificate.yaml
@@ -8,7 +8,7 @@ spec:
   secretName: {{ .Values.tls.secretName }}
   issuerRef:
     kind: {{ .Values.tls.issuer.kind }}
-    name: {{ .Values.tls.issuer.name }}-{{ .Values.tls.issuer.environment }}
+    name: {{ .Values.tls.issuer.name }}
   dnsNames:
 {{- range .Values.tls.domains }}
     - {{ . | quote }}
