--- a/charts/ai-gateway-core/values.yaml
+++ b/charts/ai-gateway-core/values.yaml
@@ -1,3 +1,24 @@
+namespace: "converse-llm"
+envoy:
+  namespace: "envoy-gateway-system"
+
+tls:
+  enabled: true
+
+  domains:
+    - converse-llm.camer.digital
+
+  secretName: converse-llm-tls
+
+  issuer:
+    create: true
+    kind: ClusterIssuer
+    name: letsencrypt
+    email: security@camer.digital
+    environment: staging # staging | prod
+
+  redirectToHttps: true
+
 gatewayClass:
   enabled: true
   name: ai-gateway
@@ -15,8 +36,17 @@ gateway:
     - name: http
       protocol: HTTP
       port: 80
+    - name: https
+      protocol: HTTPS
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - kind: Secret
+            name: converse-llm-tls
   infrastructure:
     enabled: true
+
 
 envoyProxy:
   enabled: true
