--- a/charts/keycloak-backup/Chart.yaml
+++ b/charts/keycloak-backup/Chart.yaml
@@ -2,5 +2,10 @@ apiVersion: v2
 name: keycloak-backup
 description: Automated Keycloak database backup to S3-compatible storage
 type: application
-version: 0.1.0
+version: 0.1.1
 appVersion: "0.1.0"
+dependencies:
+  - name: app-template
+    version: "4.6.2"
+    repository: https://bjw-s-labs.github.io/helm-charts
+    alias: keycloak-backup
