--- a/charts/pgdump-backup/values.yaml
+++ b/charts/pgdump-backup/values.yaml
@@ -48,47 +48,47 @@ app-template:
               cpu: 500m
               memory: 512Mi
           env:
-            - name: POSTGRES_HOST
+            POSTGRES_HOST:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: host
-            - name: POSTGRES_PORT
+            POSTGRES_PORT:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: port
-            - name: POSTGRES_DATABASE
+            POSTGRES_DATABASE:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: dbname
-            - name: POSTGRES_USER
+            POSTGRES_USER:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: username
-            - name: POSTGRES_PASSWORD
+            POSTGRES_PASSWORD:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: password
-            - name: S3_BUCKET
+            S3_BUCKET:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_BUCKET_NAME
-            - name: S3_ACCESS_KEY_ID
+            S3_ACCESS_KEY_ID:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_ACCESS_KEY_ID
-            - name: S3_SECRET_ACCESS_KEY
+            S3_SECRET_ACCESS_KEY:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_SECRET_ACCESS_KEY
-            - name: S3_REGION
+            S3_REGION:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
@@ -127,50 +127,49 @@ app-template:
               cpu: 500m
               memory: 1Gi
           env:
-            - name: POSTGRES_HOST
+            POSTGRES_HOST:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: host
-            - name: POSTGRES_PORT
+            POSTGRES_PORT:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: port
-            - name: POSTGRES_DATABASE
+            POSTGRES_DATABASE:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: dbname
-            - name: POSTGRES_USER
+            POSTGRES_USER:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: username
-            - name: POSTGRES_PASSWORD
+            POSTGRES_PASSWORD:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.postgres.secretName }}"
                   key: password
-            - name: S3_BUCKET
+            S3_BUCKET:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_BUCKET_NAME
-            - name: S3_ACCESS_KEY_ID
+            S3_ACCESS_KEY_ID:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_ACCESS_KEY_ID
-            - name: S3_SECRET_ACCESS_KEY
+            S3_SECRET_ACCESS_KEY:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_SECRET_ACCESS_KEY
-            - name: S3_REGION
+            S3_REGION:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.s3.secretName }}"
                   key: S3_REGION_NAME
-            - name: BACKUP_FILE
-              value: "{{ .Values.restore.object }}"
+            BACKUP_FILE: "{{ .Values.restore.object }}"
